se agrego el estilo generico al proyecto

--- a/app/views/amends/_form.html.erb
+++ b/app/views/amends/_form.html.erb
@@ -28,6 +28,6 @@
     <%= f.number_field :image_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit nil, class: "boton" %>
   </div>
 <% end %>
