--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -28,6 +28,6 @@
     <%= f.date_select :finish_date %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit nil, class: "boton" %>
   </div>
 <% end %>
