--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.text_area :comments %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit nil, class: "boton" %>
   </div>
 <% end %>
