--- a/app/views/perks/_form.html.erb
+++ b/app/views/perks/_form.html.erb
@@ -40,6 +40,6 @@
     <%= f.number_field :image_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit nil, class: "boton" %>
   </div>
 <% end %>
