--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,6 +32,6 @@
     <%= f.text_field :nombre %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit nil, class: "boton" %>
   </div>
 <% end %>
