--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.number_field :galery_id %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit nil, class: "boton" %>
   </div>
 <% end %>
