--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -20,5 +20,8 @@
   <%= @project.finish_date %>
 </p>
 
+<img src="<%= @image.image_url %>"
+
+
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
