--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :galery_id %><br>
-    <%= f.number_field :galery_id %>
+    <%= f.hidden_field :galery_id %>
   </div>
   <div class="actions">
     <%= f.submit nil, class: "boton" %>
