--- a/app/views/amends/_form.html.erb
+++ b/app/views/amends/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :user_id %><br>
-    <%= f.number_field :user_id %>
+    <%= f.hidden_field :user_id %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
@@ -21,11 +21,11 @@
   </div>
   <div class="field">
     <%= f.label :project_id %><br>
-    <%= f.number_field :project_id %>
+    <%= f.hidden_field :project_id %>
   </div>
   <div class="field">
     <%= f.label :image_id %><br>
-    <%= f.number_field :image_id %>
+    <%= f.file_field :image_id %>
   </div>
   <div class="actions">
     <%= f.submit nil, class: "boton" %>
