--- a/app/views/perks/_form.html.erb
+++ b/app/views/perks/_form.html.erb
@@ -28,16 +28,12 @@
     <%= f.text_field :price %>
   </div>
   <div class="field">
-    <%= f.label :pieces %><br>
-    <%= f.number_field :pieces %>
-  </div>
-  <div class="field">
     <%= f.label :project_id %><br>
-    <%= f.number_field :project_id %>
+    <%= f.hidden_field :project_id %>
   </div>
   <div class="field">
     <%= f.label :image_id %><br>
-    <%= f.number_field :image_id %>
+    <%= f.file_field :image_id %>
   </div>
   <div class="actions">
     <%= f.submit nil, class: "boton" %>
