se agregaron validadciones basicas a todos los modelos, y se hizo la pantalla del perks.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 	<div class="footer">
 		<ul>
-			<li>Derecho 1</li>
-			<li>Derecho 1</li>
-			<li>Derecho 1</li>
-			<li>Derecho 1</li>
+			<li>No me copies</li>
+			<li>No me copies</li>
+			<li>No me copies</li>
+			<li>No me copies</li>
 		</ul>
 	</div>
