--- a/app/assets/stylesheets/estilo.css
+++ b/app/assets/stylesheets/estilo.css
@@ -159,6 +159,10 @@ a:hover{
    font-weight: bold;
 }
 
+input:focus{
+  background-color: #f2f2f2;
+}
+
 /*-------------------------------------------error_explanation------------------*/
 
 #error_explanation {
@@ -209,7 +213,7 @@ a:hover{
   display: table;
 }
 
-/*-------------------------------------------founders------------------*/
+/*-------------------------------------------founders vista parcial _founders.html.erb------------------*/
 
 .founder{
   width: 698px;
@@ -242,9 +246,10 @@ a:hover{
   font-weight: bold;
 }
 
-/*-------------------------------------------perks------------------*/
+/*--------------------------------------perks-----------------------------------------------------*/
+/*-------------------------------------------perks vista parcial _perks.html.erb------------------*/
 
-.perks{
+.perks{ 
   width: 220px;
   min-height: 100px;
   max-height: auto;
@@ -279,7 +284,97 @@ a:hover{
   font-weight: bold;
 }
 
-/*-------------------------------------------status------------------*/
+/*-------show perks------*/
+.show_perks{
+ width: 900px;
+ min-height: 300px;
+ border: 2px solid #000000;
+ margin: 0 auto 0 auto;
+ position: relative;
+ text-transform: capitalize; 
+}
+
+.show_perks .titulo{
+ width: 850px;
+ min-height: 25px;
+ background-color: #666666;
+ color: #FFFFFF;
+ padding: 10px;
+ font-size: 20px;
+ text-align: center;
+ margin: 10px auto 0 auto;
+ position: relative;
+}
+
+.show_perks .titulo{
+ width: 850px;
+ min-height: 25px;
+ background-color: #a6b3b3;
+ color: #FFFFFF;
+ padding: 10px;
+ font-size: 20px;
+ text-align: center;
+ margin: 10px auto 0 auto;
+ position: relative; 
+}
+
+.show_perks .contenedor{ 
+ width: 850px;
+ margin: 10px auto 10px auto;
+}
+
+.show_perks img{ 
+ min-width: 300px;
+ min-height: 300px;  
+ width: 300px;
+ height: 300px;
+ max-width: 300px;
+ max-height: 300px; 
+ margin-left: 40px;
+ background-color: #ffffff;
+}
+
+.show_perks .datos{ 
+ width: 500px;
+ height: 300px;
+ background-color: #ffffff;
+ float: left;
+}
+
+.show_perks .datos p{ 
+  color: #666666;
+  font-size: 16px;
+  margin-left: 10px;
+  margin-top: 10px;
+  text-align: left;
+}
+
+.show_perks .descripcion{ 
+ width: auto;
+ height: 185px;
+ margin: 10px auto 10px auto;
+ position: relative;
+ padding: 10px;
+ overflow:scroll;
+ background-color: #f2f2f2;
+}
+
+.show_perks strong{ 
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.show_perks .descripcion p{ 
+  color: #666666;
+  font-size: 14px;
+  margin-left: 10px;
+  margin-top: 20px;
+  text-align: left;
+}
+
+
+
+/*-------------------------------------------status vista parcial _status.html.erb------------------*/
 
 .estatus{
   width: 218px;
@@ -310,3 +405,4 @@ a:hover{
 .estatus p strong{
   font-weight: bold;
 }
+
