ajustes parciales a rutas y navegacion

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -20,7 +20,7 @@
   <%= @project.finish_date %>
 </p>
 
-<img src="<%= @image.image_url %>"
+<img src="<%= @image.image_url %>">
 
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
