--- a/app/views/perks/show.html.erb
+++ b/app/views/perks/show.html.erb
@@ -5,7 +5,7 @@
   <div class="contenedor">
     <div class="datos">
       <p><strong>Precio: </strong><%= @perk.price %></p>
-      <p><strong>No. Piezas: </strong><%= @perk.pieces %>c
+      <p><strong>No. Piezas: </strong><%= @perk.pieces %>
       <p><strong>Fecha de envío: </strong><%= @perk.delivery_date %></p>
       <div class="descripcion"><strong>Descripción:</strong><p><%= @perk.description %></p></div>
     </div>    
