--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,19 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>User:</strong>
-  <%= @comment.user_id %>
-</p>
-
-<p>
-  <strong>Project:</strong>
-  <%= @comment.project_id %>
-</p>
-
-<p>
-  <strong>Comments:</strong>
-  <%= @comment.comments %>
-</p>
+<table> 
+	<tr>
+		<th>User:</th>
+		<th>Project:</th>
+		<th>Comments:</th>
+	</tr>
+	<tr>
+		<td><%= @comment.user_id %></td>
+		<td><%= @comment.project_id %></td>
+		<td><%= @comment.comments %></td>
+	</tr>	
+</table>
 
 <%= link_to 'Edit', edit_comment_path(@comment) %> |
 <%= link_to 'Back', comments_path %>
