--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Image url</th>
-      <th>Galery</th>
+      <th>Gallery</th>
       <th colspan="3"></th>
     </tr>
   </thead>
