--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,27 +1,21 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @project.name %>
-</p>
 
-<p>
-  <strong>Monetary goal:</strong>
-  <%= @project.monetary_goal %>
-</p>
+	<div class="show_proyects">
+		<div class="titulo">
+			 <strong>Nombre del proyecto: </strong><%= @project.name %>
+		</div>
+		<div class="datos">
+			 <p><strong>Monetary goal: </strong><%= @project.monetary_goal %></p>
+			 <p><strong>Init date: </strong><%= @project.init_date %></p>
+			 <p><strong>Finish date: </strong><%= @project.finish_date %></p>
+		</div>
+		<img src="<%= @image.image_url %>">
+	</div>
 
-<p>
-  <strong>Init date:</strong>
-  <%= @project.init_date %>
-</p>
-
-<p>
-  <strong>Finish date:</strong>
-  <%= @project.finish_date %>
-</p>
-
-<img src="<%= @image.image_url %>"
+	<%= render partial: '/projects/status' %>
+	<%= render partial: '/perks/perks' %>
 
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<%#= link_to 'Edit', edit_project_path(@project) %> |
+<%#= link_to 'Back', projects_path %>
