--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,8 +13,8 @@
 		<img src="<%= @image.image_url %>">
 	</div>
 
-	<%= render partial: '/projects/status' %>
-	<%= render partial: '/perks/perks' %>
+	<%= render partial: '/projects/status', locals: {project: @project} %>
+	<%= render partial: '/perks/perks', locals: {project: @perk}  %>
 
 
 <%#= link_to 'Edit', edit_project_path(@project) %> |
