--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<%= render partial: '/projects/menu', locals: {project: @project} %>
 
 	<div class="show_proyects">
 		<div class="titulo">
@@ -13,9 +14,9 @@
 		<img src="<%= @image.image_url %>">
 	</div>
 
-	<%= render partial: '/projects/status', locals: {project: @project} %>
-	<%= render partial: '/perks/perks', locals: {project: @perk}  %>
+<%= render partial: '/projects/status', locals: {project: @project} %>
+<%= render partial: '/perks/perks', locals: {project: @perk}  %>
 
 
-<%#= link_to 'Edit', edit_project_path(@project) %> |
+<%#= link_to 'Edit', edit_project_path(@project) %> 
 <%#= link_to 'Back', projects_path %>
