--- a/app/views/projects/_menu.html.erb
+++ b/app/views/projects/_menu.html.erb
@@ -1,7 +1,7 @@
 <div class="project_menu">
 	<ul>
 		<li><a href="#">About</a></li>
-		<li><a href="#">Update</a></li>
+		<li><a href="projects/amends/:id">Update</a></li>
 		<li><a href="#">Comments</a></li>
 		<li><a href="#">Founders</a></li>
 		<li><a href="#">Gallery</a></li>
