--- a/app/assets/stylesheets/estilo.css
+++ b/app/assets/stylesheets/estilo.css
@@ -98,7 +98,8 @@ h3{
 }
 
 h4{
-   font-size: 35px;
+   font-size: 30px;
+   text-align: left;
 }
 
 h5{
@@ -304,6 +305,52 @@ input:focus{
  background-color: #ffffff;
 }
 
+
+/*-------show proyects home------*/
+
+.show_proyects_home{
+  width: 450px;
+  height: auto;
+  border: 1px solid #000000;
+  margin:10px 5px 20px auto;
+  text-align: center;
+  float: left;
+  display: block;
+}
+
+.show_proyects_home .titulo{
+ width: 100%;
+ min-height: 25px;
+ background-color: #666666;
+ color: #FFFFFF;
+ font-size: 20px;
+ padding-top: 5px;
+ text-align: center;
+ margin: 10px auto 0 auto;
+ position: relative;
+}
+
+.show_proyects_home .datos{
+ width: 500px;
+ min-height: 25px;
+ font-size: 20px;
+ padding: 10px;
+ text-align: left;
+ position: relative;
+}
+
+.show_proyects_home .datos strong{
+  font-weight: bold;
+}
+
+
+.show_proyects_home img{ 
+ text-align: center;
+ margin-top: 20px;
+ width: 300px;
+ height: 200px;
+ background-color: #ffffff;
+}
 /*--------------------------------------images-----------------------------------------------------*/
 
 
@@ -378,6 +425,14 @@ input:focus{
 .perks .descripcion p strong{
   font-weight: bold;
 }
+
+.perks img{
+ min-height: 50px;
+ min-width: 50px;
+ max-width: 150px;
+ max-height: 150px;
+}
+
 
 /*-------show perks------*/
 .show_perks{
