--- a/app/views/funders/_form.html.erb
+++ b/app/views/funders/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class="field">
     <%= f.label :user_id %><br>
-    <%= f.hidden_field :user_id %>
+    <%= f.text_field :user_id %>
   </div>
   <div class="field">
     <%= f.label :perk_id %><br>
-    <%= f.hidden_field :perk_id %>
+    <%= f.text_field :perk_id %>
   </div>
   <div class="actions">
     <%= f.submit nil, class: "boton" %>
