se implementa breadcrum sin probar y menu

--- a/app/views/projects/_menu.html.erb
+++ b/app/views/projects/_menu.html.erb
@@ -1,9 +1,9 @@
 <div class="project_menu">
 	<ul>
 		<li><a href="#">About</a></li>
-		<li><a href="projects/amends/:id">Update</a></li>
-		<li><a href="#">Comments</a></li>
-		<li><a href="#">Founders</a></li>
-		<li><a href="#">Gallery</a></li>
+		<li><a href="projects/amends/@projects.id">Update</a></li>
+		<li><a href="projects/comments/:id">Comments</a></li>
+		<li><a href="projects/funders/:id">Founders</a></li>
+		<li><a href="projects/galleries/:id">Gallery</a></li>
 	</ul>				
 </div>
