--- a/app/views/layouts/_breadcrumb.html.erb
+++ b/app/views/layouts/_breadcrumb.html.erb
@@ -1,1 +1,1 @@
-<div class="breadcrumb"><span class="linea">Para que no te pierdas / yo / te digo / la dirección!</span></div>
+<div class="breadcrumb"><span class="linea"><%= render_breadcrumbs :separator => ' / ' %></span></div>
