--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,7 +15,7 @@
 	</div>
 
 <%= render partial: '/projects/status', locals: {project: @project} %>
-<%= render partial: '/perks/perks', locals: {project: @perk}  %>
+<%= render partial: '/perks/perks', locals: {perk: @perk}  %>
 
 
 <%#= link_to 'Edit', edit_project_path(@project) %> 
