--- a/app/views/amends/edit.html.erb
+++ b/app/views/amends/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @amend %> |
-<%= link_to 'Back', amends_path %>
+<%#= link_to 'Show', @amend %> |
+<%#= link_to 'Back', amends_path %>
