--- a/app/views/amends/new.html.erb
+++ b/app/views/amends/new.html.erb
@@ -1,5 +1,7 @@
+<%= render partial: '/projects/menu', locals: {project: @project} %>
+<br/ ><br/ >
 <h1>New amend</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', amends_path %>
+<%#= link_to 'Back', amends_path %>
