--- a/app/views/amends/show.html.erb
+++ b/app/views/amends/show.html.erb
@@ -20,5 +20,5 @@
   <%= @amend.image_id %>
 </p>
 
-<%= link_to 'Edit', edit_amend_path(@amend) %> |
-<%= link_to 'Back', amends_path %>
+<%#= link_to 'Edit', edit_amend_path(@amend) %> |
+<%#= link_to 'Back', amends_path %>
