--- a/app/views/funders/show.html.erb
+++ b/app/views/funders/show.html.erb
@@ -10,5 +10,5 @@
   <%= @funder.perk_id %>
 </p>
 
-<%= link_to 'Edit', edit_funder_path(@funder) %> |
-<%= link_to 'Back', funders_path %>
+<%#= link_to 'Edit', edit_funder_path(@funder) %> |
+<%#= link_to 'Back', funders_path %>
