--- a/app/views/funders/edit.html.erb
+++ b/app/views/funders/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @funder %> |
-<%= link_to 'Back', funders_path %>
+<%#= link_to 'Show', @funder %> |
+<%#= link_to 'Back', funders_path %>
