--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -15,5 +15,5 @@
   <%= @gallery.project_id %>
 </p>
 
-<%= link_to 'Edit', edit_gallery_path(@gallery) %> |
-<%= link_to 'Back', galleries_path %>
+<%#= link_to 'Edit', edit_gallery_path(@gallery) %> |
+<%#= link_to 'Back', galleries_path %>
