--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -31,6 +31,9 @@
     <%= f.label :finish_date %><br>
     <%= f.date_select :finish_date %>
   </div>
+    <div class="field">
+    <%= f.hidden_field :user_id , @user  %>
+  </div>
   <div class="actions">
     <%= f.submit nil, class: "boton" %>
   </div>
