--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -18,9 +18,9 @@
         <td><%= project.monetary_goal %></td>
         <td><%= project.init_date %></td>
         <td><%= project.finish_date %></td>
-        <td><%= link_to 'Show', project %></td>
+        <% if check_propiety(project) %>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
