ajustes para poner en produccion2

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,8 +2,8 @@
 
 <%= render partial: '/projects/menu', locals: {project: @project} %>
 
-	<% if check_propiety(project) %>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
+	<% if @permiso %>
+        <td><%= link_to 'Edit', edit_project_path(@project) %></td>
     <% end %>
 	<div class="show_proyects">
 		<div class="titulo">
