ajustes de rutas new y en sus controladores

--- a/app/views/galleries/new.html.erb
+++ b/app/views/galleries/new.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: '/projects/menu', locals: {project: @project} %>
+<%= render partial: '/projects/menu', locals: {project: @project2} %>
 <br/ ><br/ >
 <h1>Nueva Galeria</h1>
 
