--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -13,5 +13,5 @@
 	</tr>	
 </table>
 
-<%]#= link_to 'Edit', edit_comment_path(@comment) %> |
+<%#= link_to 'Edit', edit_comment_path(@comment) %> |
 <%#= link_to 'Back', comments_path %>
