--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -32,7 +32,7 @@
     <%= f.date_select :finish_date %>
   </div>
     <div class="field">
-    <%= f.hidden_field :user_id , @user  %>
+    <%= f.hidden_field(:user_id , :value => @user)  %>
   </div>
   <div class="actions">
     <%= f.submit nil, class: "boton" %>
