--- a/app/assets/stylesheets/estilo.css
+++ b/app/assets/stylesheets/estilo.css
@@ -252,6 +252,9 @@ input:focus{
   text-align: center;
   float: left;
   display: block;
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 10px 6px -6px #777;
+  box-shadow: 0 10px 6px -6px #777;    
 }
 
 .show_proyects .titulo{
@@ -388,8 +391,11 @@ input:focus{
 .perks{ 
   width: 200px;
   height: auto;
-  margin:10px 10px 0 auto;
+  margin:0 10px 0 auto;
   float: right;
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 10px 6px -6px #777;
+  box-shadow: 0 10px 6px -6px #777;  
 }
 
 .perks .nombre{
@@ -600,7 +606,7 @@ input:focus{
   width: 198px;
   min-height: 98px;
   max-height: auto;
-  margin:30px 10px 0 auto;
+  margin:30px 10px 10px auto;
   border: 1px solid #000000;
   -webkit-box-shadow: 0 10px 6px -6px #777;
   -moz-box-shadow: 0 10px 6px -6px #777;
