--- a/app/views/funders/index.html.erb
+++ b/app/views/funders/index.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: '/projects/menu', locals: {project: @project} %>
 <br/ ><br/ >
-<h1>Listing funders</h1>
+<h1>Lista de Socios</h1>
 
 <table>
   <thead>
@@ -26,4 +26,3 @@
 
 <br>
 
-<%= link_to 'New Funder', new_funder_path %>
