--- a/app/views/funders/new.html.erb
+++ b/app/views/funders/new.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: '/projects/menu', locals: {project: @project} %>
 <br/ ><br/ >
-<h1>New funder</h1>
+<h1>Nuevo Socio</h1>
 
 <%= render 'form' %>
 
