--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: '/projects/menu', locals: {project: @project} %>
 <br/ ><br/ >
-<h1>Listing galleries</h1>
+<h1>Lista de galerias</h1>
 
 <table>
   <thead>
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Gallery', '/galleries/new/' + @project.id.to_s %>
+<%= link_to 'nueva Galeria', '/galleries/new/' + @project.id.to_s %>
