--- a/app/views/projects/_menu.html.erb
+++ b/app/views/projects/_menu.html.erb
@@ -5,10 +5,10 @@ end %>
 
 <div class="project_menu">
 	<ul>
-		<li><%=link_to "About", "/projects/#{@project.id}"%></li>
-		<li><%=link_to "Update","/projects/amends/#{@project.id}" %></li>
-		<li><%=link_to "Comments","/projects/comments/#{@project.id}" %></li>
-		<li><%=link_to "Founders","/projects/funders/#{@project.id}"%></li>
-		<li><%=link_to "Gallery","/projects/galleries/#{@project.id}" %></li>
+		<li><%=link_to "Nosotros", "/projects/#{@project.id}"%></li>
+		<li><%=link_to "Actualizaciones","/projects/amends/#{@project.id}" %></li>
+		<li><%=link_to "Comentarios","/projects/comments/#{@project.id}" %></li>
+		<li><%=link_to "Socios","/projects/funders/#{@project.id}"%></li>
+		<li><%=link_to "Galeria","/projects/galleries/#{@project.id}" %></li>
 	</ul>				
 </div>
