--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,26 +1,21 @@
 <%= render partial: '/projects/menu', locals: {project: @project} %>
 <br/ ><br/ >
-<h1>Listing comments</h1>
+<h1>Listado de Comentarios</h1>
 
 <table>
   <thead>
     <tr>
-      <th>User</th>
-      <th>Project</th>
-      <th>Comments</th>
-      <th colspan="3"></th>
+      <th>Comentarios</th>
     </tr>
   </thead>
 
   <tbody>
     <% @comments.each do |comment| %>
-      <tr>
-        <td><%= comment.user_id %></td>
-        <td><%= comment.project_id %></td>
+      <tr aling="center">
+        <td ><%= comment.user.username %></td>
+      </tr>
+      <tr aling="center">  
         <td><%= comment.comments %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Comment', "/comments/new/" + @project.id.to_s %>
+<%= link_to 'Nuevo Comentario', "/comments/new/" + @project.id.to_s %>
