--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing images</h1>
+<h1>Listado de imagenes</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Image url</th>
-      <th>Gallery</th>
+      <th>Imagen</th>
+      <th>Galleria</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,10 +13,8 @@
     <% @images.each do |image| %>
       <tr>
         <td><%= image.image_url %></td>
-        <td><%= image.galery_id %></td>
+        <td><%= image.galery.title%></td>
         <td><%= link_to 'Show', image %></td>
-        <td><%= link_to 'Edit', edit_image_path(image) %></td>
-        <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
