--- a/app/views/perks/_perks.html.erb
+++ b/app/views/perks/_perks.html.erb
@@ -1,5 +1,7 @@
 
 <% @perks.each do |perk| %>
+<!-- esto evitara que se muestre algun perk sin titulo -->
+<% unless (perk.title.blank? || perk.title.nil?) %>
 <div class="perks">
 	<div class="nombre">
 		<%= perk.title %>
@@ -9,9 +11,15 @@
 		<p><%= perk.description %></p>
 		</br>
 		<p><strong>Precio :</strong><%= perk.price %></p>
-		<p><% @image2 = Image.find(perk.image_id)%>
-		<img src="<%= @image2.image_url %>"></p>
+		<!-- hay que validar la existencia del id y de la url -->
+		<% unless perk.image_id.nil? || perk.image_id.blank? %>
+			<% @image2 = Image.find(perk.image_id)%>
+			<% unless @image2.image_url.blank? %>	
+			<p>	<img src="<%= @image2.image_url %>"></p>
+			<% end %>
+		<% end %>	
 		</br>
 	</div>
 </div>
+<% end %>
 <% end %>
