--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -4,6 +4,7 @@
 
 	<% if @permiso %>
         <td><%= link_to 'Edit', edit_project_path(@project) %></td>
+        <td><%= link_to 'Agregar Perk', '/perks/new/' + @project.id.to_s %></td>
     <% end %>
 	<div class="show_proyects">
 		<div class="titulo">
