--- a/app/views/perks/_perks.html.erb
+++ b/app/views/perks/_perks.html.erb
@@ -1,4 +1,4 @@
-
+<div class="perks">
 <% @perks.each do |perk| %>
 <!-- esto evitara que se muestre algun perk sin titulo -->
 <% unless (perk.title.blank? || perk.title.nil?) %>
@@ -21,5 +21,7 @@
 		</br>
 	</div>
 </div>
+</br>
 <% end %>
 <% end %>
+</div>
