ajustes a mail y creacion de imagenes y videos desde galeria

--- a/app/views/amends/index.html.erb
+++ b/app/views/amends/index.html.erb
@@ -2,6 +2,10 @@
 <br/ ><br/ >
 <h1>Listado de Actualizaciones</h1>
 
+<% if @permiso %>
+  <%= link_to 'Nueva Actualización', "/amends/new/" + @project.id.to_s %>
+<% end %>
+
 <table>
   <thead>
     <tr>
@@ -29,4 +33,3 @@
 
 <br>
 
-<%= link_to 'Nueva Actualización', "/amends/new/" + @project.id.to_s %>
