--- a/app/views/galleries/show.html.erb
+++ b/app/views/galleries/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+
 <p>
   <strong>Title:</strong>
   <%= @gallery.title %>
@@ -10,10 +11,9 @@
   <%= @gallery.description %>
 </p>
 
-<p>
-  <strong>Project:</strong>
-  <%= @gallery.project_id %>
-</p>
 
-<%#= link_to 'Edit', edit_gallery_path(@gallery) %> |
+
+<%#= link_to 'Edit', edit_gallery_path(@gallery) %> 
 <%#= link_to 'Back', galleries_path %>
+<!--poner imagenes en tabla -->
+<%#= @images.inspect %>
