--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -13,10 +13,10 @@
 
   <div class="field">
     <%= f.label :image_url%><br>
-    <%= f.text_field :image_url%>
+    <%= f.file_field :image_url%>
   </div>
   <div class="field">
-    <%= f.label :galery_id %><br>
+    <%#= f.label :galery_id %><br>
     <%= f.hidden_field :galery_id %>
   </div>
   <div class="actions">
