--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :video_url %><br>
-    <%= f.file_field :video_url %>
+    <%= f.text_field :video_url %>
   </div>
   <div class="field">
     <%= f.label :galery_id %><br>
